@@ -11,6 +11,8 @@ Revision history for Perl module Git::PurePerl:
      - fix bug where it would not find an object if there was a
        mixture of packs and loose objects
      - fix bug to do with empty files
+     - split methods into those that returns sha1s and those that
+       return objects
 
 0.38 Thu Dec 18 10:26:49 GMT 2008
      - add init() method to create a new repository
